check temp every 5 mins and email me if too hot

--- a/nodejsserver/package.json
+++ b/nodejsserver/package.json
@@ -19,6 +19,7 @@
     "rpi-gpio": "^0.7.0",
     "async": "^1.5.2",
     "node-dht-sensor": "^0.0.12",
+    "nodemailer": "^2.3",
     "lodash": "^4.11.1"
   },
   "subdomain": "",
